Create AuthController & Configure api-routes
